src/test/resources/test_data/error/noNameBind.smtx
main module noNameBind {
    @decl(x, int);
    @bind(7, 5);
}